<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.qq.dawd_assignment09.EmployeeManagerActivity"
    tools:layout_editor_absoluteY="81dp"
    tools:layout_editor_absoluteX="0dp">

    <TextView
        android:id="@+id/tvDateofbirth"
        android:layout_width="0dp"
        android:layout_height="40dp"
        android:gravity="center_vertical"
        android:labelFor="@+id/etDateofbirth"
        android:text="@string/lblDateOfBirth"
        android:textColor="@android:color/black"
        tools:layout_constraintTop_creator="1"
        tools:layout_constraintRight_creator="1"
        app:layout_constraintRight_toRightOf="@+id/tvEmail"
        app:layout_constraintTop_toBottomOf="@+id/tvName"
        tools:layout_constraintLeft_creator="1"
        app:layout_constraintLeft_toLeftOf="@+id/tvEmail" />

    <TextView
        android:id="@+id/tvEmail"
        android:layout_width="100dp"
        android:layout_height="40dp"
        android:gravity="center_vertical"
        android:labelFor="@+id/etEmail"
        android:text="@string/lblEmail"
        android:textColor="@android:color/black"
        tools:layout_constraintTop_creator="1"
        android:layout_marginStart="38dp"
        app:layout_constraintTop_toBottomOf="@+id/tvDateofbirth"
        tools:layout_constraintLeft_creator="1"
        app:layout_constraintLeft_toLeftOf="parent" />

    <EditText
        android:id="@+id/etDateofbirth"
        android:layout_width="wrap_content"
        android:layout_height="40dp"
        android:ems="10"
        android:inputType="textPersonName"
        tools:layout_constraintTop_creator="1"
        tools:layout_constraintRight_creator="1"
        app:layout_constraintRight_toRightOf="@+id/etEmail"
        app:layout_constraintTop_toBottomOf="@+id/etName"
        tools:layout_constraintLeft_creator="1"
        app:layout_constraintLeft_toLeftOf="@+id/etEmail" />

    <TextView
        android:id="@+id/tvName"
        android:layout_width="0dp"
        android:layout_height="40dp"
        android:gravity="center_vertical"
        android:labelFor="@+id/etName"
        android:text="@string/lblName"
        android:textColor="@android:color/black"
        tools:layout_constraintTop_creator="1"
        tools:layout_constraintRight_creator="1"
        app:layout_constraintRight_toRightOf="@+id/tvDateofbirth"
        app:layout_constraintTop_toBottomOf="@+id/tvId"
        tools:layout_constraintLeft_creator="1"
        app:layout_constraintLeft_toLeftOf="@+id/tvDateofbirth" />

    <EditText
        android:id="@+id/etName"
        android:layout_width="wrap_content"
        android:layout_height="40dp"
        android:ems="10"
        android:inputType="textPersonName"
        tools:layout_constraintTop_creator="1"
        tools:layout_constraintRight_creator="1"
        app:layout_constraintRight_toRightOf="@+id/etDateofbirth"
        app:layout_constraintTop_toBottomOf="@+id/etId"
        tools:layout_constraintLeft_creator="1"
        app:layout_constraintLeft_toLeftOf="@+id/etDateofbirth" />

    <TextView
        android:id="@+id/tvId"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:gravity="center_vertical"
        android:labelFor="@+id/etId"
        android:text="@string/llbId"
        android:textColor="@android:color/black"
        tools:layout_constraintTop_creator="1"
        tools:layout_constraintRight_creator="1"
        tools:layout_constraintBottom_creator="1"
        app:layout_constraintBottom_toBottomOf="@+id/etId"
        app:layout_constraintRight_toRightOf="@+id/tvName"
        tools:layout_constraintLeft_creator="1"
        app:layout_constraintLeft_toLeftOf="@+id/tvName"
        app:layout_constraintTop_toTopOf="@+id/etId" />

    <EditText
        android:id="@+id/etId"
        android:layout_width="wrap_content"
        android:layout_height="40dp"
        android:layout_marginTop="16dp"
        android:ems="10"
        android:inputType="number"
        app:layout_constraintLeft_toLeftOf="@+id/etName"
        app:layout_constraintRight_toRightOf="@+id/etName"
        app:layout_constraintTop_toTopOf="parent"
        tools:layout_constraintLeft_creator="1"
        tools:layout_constraintRight_creator="1"
        tools:layout_constraintTop_creator="1" />

    <EditText
        android:id="@+id/etEmail"
        android:layout_width="wrap_content"
        android:layout_height="40dp"
        android:ems="10"
        android:inputType="textEmailAddress"
        tools:layout_constraintTop_creator="1"
        app:layout_constraintTop_toBottomOf="@+id/etDateofbirth"
        tools:layout_constraintLeft_creator="1"
        app:layout_constraintLeft_toRightOf="@+id/tvDateofbirth" />

    <Button
        android:id="@+id/btnAdd"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:onClick="add"
        android:text="@string/btnAdd"
        android:layout_marginStart="38dp"
        tools:layout_constraintTop_creator="1"
        tools:layout_constraintBottom_creator="1"
        app:layout_constraintBottom_toTopOf="@+id/btnExit"
        android:layout_marginTop="234dp"
        tools:layout_constraintLeft_creator="1"
        android:layout_marginBottom="233dp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/btnDisplay"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:onClick="display"
        android:text="@string/btnDisplay"
        tools:layout_constraintRight_creator="1"
        app:layout_constraintRight_toRightOf="@+id/etEmail"
        app:layout_constraintBaseline_toBaselineOf="@+id/btnAdd"
        tools:layout_constraintBaseline_creator="1"
        tools:layout_constraintLeft_creator="1"
        app:layout_constraintLeft_toLeftOf="@+id/btnRead" />

    <Button
        android:id="@+id/btnFind"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="38dp"
        android:onClick="find"
        android:text="@string/btnFind"
        tools:layout_constraintTop_creator="1"
        android:layout_marginTop="37dp"
        app:layout_constraintTop_toBottomOf="@+id/btnAdd"
        tools:layout_constraintLeft_creator="1"
        app:layout_constraintLeft_toLeftOf="parent" />

    <Button
        android:id="@+id/btnWrite"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="38dp"
        android:onClick="write"
        android:text="@string/btnWrite"
        tools:layout_constraintTop_creator="1"
        android:layout_marginTop="37dp"
        app:layout_constraintTop_toBottomOf="@+id/btnFind"
        tools:layout_constraintLeft_creator="1"
        app:layout_constraintLeft_toLeftOf="parent" />

    <Button
        android:id="@+id/btnRead"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:onClick="read"
        android:text="@string/btnRead"
        app:layout_constraintRight_toLeftOf="@+id/btnExit"
        tools:layout_constraintRight_creator="1"
        android:layout_marginEnd="2dp"
        app:layout_constraintBaseline_toBaselineOf="@+id/btnWrite"
        tools:layout_constraintBaseline_creator="1" />

    <Button
        android:id="@+id/btnExit"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="16dp"
        android:onClick="exit"
        android:text="@string/btnExit"
        tools:layout_constraintRight_creator="1"
        tools:layout_constraintBottom_creator="1"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_marginBottom="39dp" />
</android.support.constraint.ConstraintLayout>
