<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.qq.dawd_assignment09.EditActivity"
    tools:layout_editor_absoluteY="81dp"
    tools:layout_editor_absoluteX="0dp">

    <TextView
        android:id="@+id/tvDateofbirth"
        android:layout_width="0dp"
        android:layout_height="40dp"
        android:gravity="center_vertical"
        android:labelFor="@+id/etDateofbirth"
        android:text="@string/lblDateOfBirth"
        android:textColor="@android:color/black"
        tools:layout_constraintTop_creator="1"
        tools:layout_constraintRight_creator="1"
        app:layout_constraintRight_toRightOf="@+id/tvName"
        app:layout_constraintTop_toBottomOf="@+id/tvName"
        tools:layout_constraintLeft_creator="1"
        app:layout_constraintLeft_toLeftOf="@+id/tvName" />

    <TextView
        android:id="@+id/tvEmail"
        android:layout_width="0dp"
        android:layout_height="40dp"
        android:gravity="center_vertical"
        android:labelFor="@+id/etEmail"
        android:text="@string/lblEmail"
        android:textColor="@android:color/black"
        tools:layout_constraintTop_creator="1"
        tools:layout_constraintRight_creator="1"
        app:layout_constraintRight_toRightOf="@+id/tvDateofbirth"
        app:layout_constraintTop_toBottomOf="@+id/tvDateofbirth"
        tools:layout_constraintLeft_creator="1"
        app:layout_constraintLeft_toLeftOf="@+id/tvDateofbirth" />

    <EditText
        android:id="@+id/etEmail"
        android:layout_width="wrap_content"
        android:layout_height="40dp"
        android:ems="10"
        android:inputType="textEmailAddress"
        app:layout_constraintLeft_toLeftOf="@+id/etDateofbirth"
        app:layout_constraintRight_toRightOf="@+id/etDateofbirth"
        app:layout_constraintTop_toBottomOf="@+id/etDateofbirth"
        tools:layout_constraintLeft_creator="1"
        tools:layout_constraintRight_creator="1"
        tools:layout_constraintTop_creator="1"
        android:layout_marginTop="0dp"
        app:layout_constraintHorizontal_bias="0.0" />

    <TextView
        android:id="@+id/tvName"
        android:layout_width="0dp"
        android:layout_height="40dp"
        android:gravity="center_vertical"
        android:labelFor="@+id/etName"
        android:text="@string/lblName"
        android:textColor="@android:color/black"
        app:layout_constraintLeft_toLeftOf="@+id/tvId"
        app:layout_constraintRight_toRightOf="@+id/tvId"
        app:layout_constraintTop_toBottomOf="@+id/tvId"
        tools:layout_constraintLeft_creator="1"
        tools:layout_constraintRight_creator="1"
        tools:layout_constraintTop_creator="1" />

    <EditText
        android:id="@+id/etId"
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:layout_marginEnd="48dp"
        android:ems="10"
        android:inputType="number"
        app:layout_constraintBottom_toBottomOf="@+id/tvId"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="@+id/tvId"
        tools:layout_constraintBottom_creator="1"
        tools:layout_constraintRight_creator="1"
        tools:layout_constraintTop_creator="1" />

    <TextView
        android:id="@+id/tvId"
        android:layout_width="100dp"
        android:layout_height="40dp"
        android:layout_marginTop="29dp"
        android:gravity="center_vertical"
        android:labelFor="@+id/etId"
        android:text="@string/llbId"
        android:textColor="@android:color/black"
        app:layout_constraintRight_toLeftOf="@+id/etId"
        app:layout_constraintTop_toBottomOf="@+id/textView7"
        tools:layout_constraintRight_creator="1"
        tools:layout_constraintTop_creator="1" />

    <EditText
        android:id="@+id/etDateofbirth"
        android:layout_width="wrap_content"
        android:layout_height="40dp"
        android:ems="10"
        android:inputType="textPersonName"
        tools:layout_constraintTop_creator="1"
        tools:layout_constraintRight_creator="1"
        app:layout_constraintRight_toRightOf="@+id/etName"
        app:layout_constraintTop_toBottomOf="@+id/etName"
        tools:layout_constraintLeft_creator="1"
        app:layout_constraintLeft_toLeftOf="@+id/etName" />

    <EditText
        android:id="@+id/etName"
        android:layout_width="wrap_content"
        android:layout_height="40dp"
        android:ems="10"
        android:inputType="textPersonName"
        app:layout_constraintLeft_toLeftOf="@+id/etId"
        app:layout_constraintRight_toRightOf="@+id/etId"
        app:layout_constraintTop_toBottomOf="@+id/etId"
        tools:layout_constraintLeft_creator="1"
        tools:layout_constraintRight_creator="1"
        tools:layout_constraintTop_creator="1" />

    <TextView
        android:id="@+id/textView7"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:background="@android:color/holo_blue_light"
        android:text="@string/lblEdit"
        android:textAlignment="center"
        android:textColor="@android:color/black"
        android:textSize="30sp"
        tools:layout_constraintTop_creator="1"
        tools:layout_constraintRight_creator="1"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="8dp"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_marginTop="16dp"
        tools:layout_constraintLeft_creator="1"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/btnSave"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:onClick="save"
        android:text="@string/btnSave"
        tools:layout_constraintTop_creator="1"
        android:layout_marginTop="37dp"
        app:layout_constraintTop_toBottomOf="@+id/etEmail"
        tools:layout_constraintLeft_creator="1"
        app:layout_constraintLeft_toLeftOf="@+id/etEmail" />

    <Button
        android:id="@+id/btnBack"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:onClick="back"
        android:text="@string/btnBack"
        tools:layout_constraintRight_creator="1"
        tools:layout_constraintBottom_creator="1"
        app:layout_constraintBottom_toBottomOf="parent"
        android:layout_marginEnd="16dp"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_marginBottom="73dp" />

</android.support.constraint.ConstraintLayout>
