<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.qq.dawd_assignment09.FindActivity">

    <Button
        android:id="@+id/btnBack"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="55dp"
        android:layout_marginEnd="16dp"
        android:onClick="back"
        android:text="@string/btnBack"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        tools:layout_constraintBottom_creator="1"
        tools:layout_constraintRight_creator="1" />

    <TextView
        android:id="@+id/tvEnterId"
        android:layout_width="wrap_content"
        android:layout_height="40dp"
        android:gravity="center_vertical"
        android:labelFor="@+id/etFind"
        android:text="@string/lblEnterId"
        android:textColor="@android:color/black"
        android:textSize="18sp"
        app:layout_constraintRight_toLeftOf="@+id/etFind"
        tools:layout_constraintRight_creator="1"
        android:layout_marginEnd="15dp"
        app:layout_constraintBaseline_toBaselineOf="@+id/etFind"
        tools:layout_constraintBaseline_creator="1" />

    <EditText
        android:id="@+id/etFind"
        android:layout_width="wrap_content"
        android:layout_height="40dp"
        android:layout_marginEnd="55dp"
        android:layout_marginTop="76dp"
        android:ems="10"
        android:inputType="textPersonName"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:layout_constraintRight_creator="1"
        tools:layout_constraintTop_creator="1" />

    <Button
        android:id="@+id/btnFind"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:onClick="find"
        android:text="@string/btnFind"
        tools:layout_constraintTop_creator="1"
        android:layout_marginStart="19dp"
        android:layout_marginTop="47dp"
        app:layout_constraintTop_toBottomOf="@+id/etFind"
        tools:layout_constraintLeft_creator="1"
        app:layout_constraintLeft_toLeftOf="@+id/etFind" />
</android.support.constraint.ConstraintLayout>
